[metadata]
name = yaml2toml
version = 1.0.0
author = J.R. "hiljusti" Hill
author_email = hiljusti@pm.me
description = Convert YAML to TOML
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hiljusti/yaml2toml
project_urls =
    Bug Tracker = https://github.com/hiljusti/yaml2toml/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
scripts =
    yaml2toml
install_requires =
    yaml
    toml

